--- a/styles/styles.css
+++ b/styles/styles.css
@@ -27,19 +27,53 @@ a {
 
 header {
   background-color: red;
-  position: sticky;
-  top: 0;
 }
 header nav {
   width: 60%;
+  position: sticky;
+  top: 0;
+  left: 16.7%;
 }
-
+.navigation-menu a {
+  text-transform: uppercase;
+  font-weight: 700;
+  font-family: "Montserrat";
+  color: #ffffff;
+  font-size: 1.6rem;
+  letter-spacing: -1px;
+}
+.navigation-menu li:nth-child(1) a,
+.navigation-menu li:nth-child(2) a {
+  color: #000000;
+}
+.nav-active {
+  position: relative;
+}
+.nav-active::before {
+  content: "";
+  display: inline-block;
+  position: absolute;
+  left: 0;
+  translate: -100% 0;
+  top: 50%;
+  height: 1.5px;
+  background-color: #b8a47e;
+  width: 3rem;
+}
+.nav-active::after {
+  content: "";
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #b8a47e;
+}
 .header-logo {
   width: clamp(10rem, 11.55%, 20rem);
   text-align: center;
-  position: relative;
   translate: 0 -30.75%;
-  margin-left: 25px;
+  margin-left: 21px;
+  position: absolute;
 }
 .header-logo img {
   width: 100%;
