--- a/styles/styles.css
+++ b/styles/styles.css
@@ -840,6 +840,91 @@ footer {
   width: 7px;
   margin-left: 21px;
 }
+
+.page-navigator {
+  position: fixed;
+  left: 75px;
+  top: 29.1%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  z-index: 10;
+}
+.page-navigator::after {
+  z-index: -1;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 20px;
+  top: -23px;
+  left: -20px;
+  position: absolute;
+  border-radius: 74px;
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.page-navigator button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+.arrow-btn-container {
+  display: flex;
+  flex-direction: column;
+  gap: 29px;
+  margin-bottom: 43px;
+}
+.arrow-btn-container button {
+  width: 26px;
+}
+.arrow-btn-container::after {
+  margin-left: 12px;
+  content: "";
+  height: 37px;
+  width: 2px;
+  background-color: black;
+  margin-top: -18px;
+  background-color: #b8a47e;
+}
+
+.page-numbers {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-transform: uppercase;
+  color: #000000;
+  margin-left: -5px;
+  font-weight: 400;
+}
+.page-numbers .page-number {
+  font-size: 18px;
+  letter-spacing: -0.5px;
+  font-weight: 700;
+  margin-bottom: 14px;
+  transition: transform 0.2s;
+}
+.page-numbers .page-number:hover {
+  transform: scale(1.1);
+}
+.page-numbers .page-number-active {
+  font-size: 45px;
+  position: relative;
+  margin-bottom: 47px;
+}
+.page-numbers .page-number-active::after {
+  z-index: -1;
+  content: "";
+  display: block;
+  /* width: 100%; */
+  /* height: 100%; */
+  padding: 38px;
+  top: -11px;
+  left: -12px;
+  position: absolute;
+  border-radius: 74px;
+  background-color: #ffffff;
+}
+
 @keyframes fadeInDown {
   0% {
     opacity: 0;
