--- a/styles/styles.css
+++ b/styles/styles.css
@@ -650,7 +650,9 @@ a {
 
 .page-navigator {
   position: fixed;
-  left: 75px;
+  width: 91px;
+  padding: 0px;
+  left: 73px;
   top: 29.1%;
   display: flex;
   flex-direction: column;
@@ -663,9 +665,9 @@ a {
   display: block;
   width: 100%;
   height: 100%;
-  padding: 20px;
+  padding: 17px 6px;
   top: -23px;
-  left: -20px;
+  left: -7px;
   position: absolute;
   border-radius: 74px;
   background-color: rgba(255, 255, 255, 0.3);
