fix(root): add responsiveness

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -247,10 +247,10 @@ a {
 
 .section-four {
   margin-top: 25px;
-  padding-inline: 186px 204px;
+  padding-inline: 100px;
 }
 .section-four .title {
-  margin-top: 169px;
+  margin-top: 170px;
 }
 .section-four .title h1 {
   font-size: 6rem;
@@ -260,7 +260,7 @@ a {
   color: #383838;
   font-weight: 750;
   text-align: center;
-  padding-right: 90px;
+  padding-right: 105px;
 }
 .section-four .label-text {
   display: flex;
@@ -274,7 +274,8 @@ a {
   color: #383838;
 }
 .section-four .label-text p {
-  padding: 1px 306px 1px 7px;
+  padding: 0px 17.95% 1px 7px;
+  margin-right: 104px;
   background-color: #e1daca;
   position: relative;
 }
@@ -291,7 +292,7 @@ a {
 
 .collection-wrapper {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1.408fr 1fr;
   padding-top: 84px;
 }
 
@@ -304,6 +305,7 @@ a {
   color: #383838;
   font-weight: 700;
   position: relative;
+  padding-left: 8.7%;
 }
 .cell01 .heading-number::after {
   content: "";
@@ -316,7 +318,8 @@ a {
 
 .cell01 .image-container {
   margin-top: -44px;
-  width: 955px;
+  width: 96%;
+  margin-left: 84px;
 }
 
 .cell02 {
@@ -324,6 +327,7 @@ a {
   flex-direction: column;
   justify-content: center;
   position: relative;
+  padding-left: 43px;
 }
 .cell02 .content-wrapper {
   padding-left: 49px;
@@ -374,10 +378,10 @@ a {
   content: "";
   position: absolute;
   display: block;
-  width: 500px;
-  height: 285px;
-  bottom: -35px;
-  left: 77px;
+  width: 27%;
+  height: 153px;
+  bottom: 100px;
+  left: 119px;
   background-image: url(../utils/images/tanner_logo2.svg);
   background-size: 153px;
   background-repeat: no-repeat;
@@ -387,7 +391,7 @@ a {
   content: "";
   height: 69px;
   top: 148px;
-  left: 49px;
+  left: 94px;
   width: 2px;
   background-color: black;
 }
@@ -395,11 +399,16 @@ a {
   position: absolute;
   content: "";
   height: 138px;
-  bottom: 113px;
-  left: 61px;
+  bottom: 114px;
+  left: 106px;
   width: 2px;
   background-color: black;
   z-index: 2;
+}
+.cell03 {
+  justify-content: center;
+  display: flex;
+  align-items: center;
 }
 .cell03 h1 {
   font-size: 2.6rem;
@@ -422,7 +431,7 @@ a {
   height: 30px;
 }
 .cell03 .content-wrapper {
-  padding: 72px 0 0 186px;
+  padding: 71px 0 0 62px;
   position: relative;
 }
 .cell03 .read-more a::after {
@@ -466,14 +475,18 @@ a {
 }
 .cell04 .image-container {
   position: absolute;
-  top: -151px;
-  left: -143px;
-  width: 586px;
+  top: -152px;
+  left: -100px;
+  width: 82.9%;
 }
 
 .cell05 {
+  display: flex;
   position: relative;
   z-index: 2;
+  /* padding-right: 160px; */
+  align-items: center;
+  justify-content: end;
 }
 .cell05 .heading-number {
   opacity: 0.529;
@@ -483,13 +496,14 @@ a {
   color: #383838;
   font-weight: 700;
   position: absolute;
-  right: 133px;
-  top: 22px;
+  right: 89px;
+  top: 23px;
 }
 .cell05 .image-container {
-  width: 754px;
+  width: 60.1%;
   padding-top: 62px;
-  padding-left: 156px;
+  margin-right: 15.4%;
+  /* padding-left: 130px; */
 }
 
 .cell06 {
@@ -497,7 +511,7 @@ a {
   flex-direction: column;
   justify-content: center;
   position: relative;
-  margin-left: -71px;
+  margin-left: -27px;
 }
 .cell06 .content-wrapper {
   padding-left: 50px;
@@ -555,7 +569,7 @@ a {
   color: #383838;
   font-weight: 700;
   position: absolute;
-  right: 90px;
+  right: 26.5%;
   bottom: 104px;
   z-index: 3;
 }
@@ -576,8 +590,8 @@ a {
 }
 .cell07 .content-wrapper {
   text-align: right;
-  padding-right: 230px;
-  padding-top: 55px;
+  padding-right: 18.6%;
+  padding-top: 56px;
 }
 .cell08 {
   position: relative;
@@ -585,14 +599,14 @@ a {
 }
 .cell08 .image-container {
   position: absolute;
-  top: -131px;
-  width: 679px;
-  left: -269px;
+  top: -129px;
+  width: 96%;
+  left: -31.7%;
 }
 .cell08 .image-container::after {
   content: "";
   position: absolute;
-  width: 215px;
+  width: 31.7%;
   z-index: -1;
   height: 555px;
   mix-blend-mode: multiply;
@@ -608,7 +622,7 @@ a {
   content: "";
   position: absolute;
   width: 215px;
-  height: 371px;
+  height: 31.7%;
   top: 62px;
   right: 9px;
   background-image: url(../utils/images/decoration-end.svg);
