--- a/styles/header.css
+++ b/styles/header.css
@@ -17,6 +17,10 @@ header nav {
   box-shadow: 0px 20px 30px 0px rgba(1, 11, 60, 0.06);
   animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
 }
+.sticky-nav .navigation-menu {
+  justify-content: center;
+  width: 100%;
+}
 .sticky-nav .navigation-menu a {
   color: #000000;
 }
@@ -36,7 +40,7 @@ header nav {
 
 .navigation-menu {
   display: flex;
-  gap: 95px;
+  gap: 8.3%;
   align-items: center;
   flex-wrap: wrap;
 }
@@ -92,4 +96,52 @@ header nav {
   translate: 200% 200%;
   background-color: #b8a47e;
   position: absolute;
+}
+
+.menu-toggle {
+  display: none;
+}
+
+/* Media query for small screens */
+@media (max-width: 980px) {
+  header nav {
+    width: 60%;
+    height: 46px;
+    position: fixed;
+    z-index: 99;
+    justify-content: right;
+    align-items: center;
+    margin-left: 0;
+    padding-left: 0;
+  }
+  .navigation-menu {
+    display: none;
+  }
+
+  .menu-toggle {
+    display: block;
+    cursor: pointer;
+  }
+
+  /* Styling for the hamburger icon bars */
+  .bar {
+    width: 30px;
+    height: 3px;
+    background-color: #333;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+
+  /* Styling for the "open" state of the hamburger icon */
+  .menu-open .bar:nth-child(1) {
+    transform: rotate(-45deg) translate(-7px, 8px);
+  }
+
+  .menu-open .bar:nth-child(2) {
+    opacity: 0;
+  }
+
+  .menu-open .bar:nth-child(3) {
+    transform: rotate(45deg) translate(-5px, -6px);
+  }
 }
