--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,7 +18,7 @@ a {
 }
 
 .section-one .hero-wrapper {
-  padding: 107px 348px 0;
+  padding: 5.7% 18.4% 0;
   height: 300px;
 }
 
@@ -169,9 +169,9 @@ a {
 }
 
 .section-two .hero-wrapper::after {
-  height: 315px;
+  height: 67%;
   top: 7px;
-  width: 883px;
+  width: 50.6%;
 }
 
 .section-two .arrow-down {
@@ -193,7 +193,7 @@ a {
   display: flex;
   position: relative;
   gap: 91.3px;
-  padding-left: 156px;
+  padding-left: 9%;
   height: 347px;
 }
 .section-three .description {
@@ -213,9 +213,9 @@ a {
 }
 
 .section-three .hero-wrapper::after {
-  height: 315px;
+  height: 91%;
   top: 1px;
-  width: 898px;
+  width: 51.5%;
   z-index: 3;
 }
 
@@ -260,7 +260,7 @@ a {
   color: #383838;
   font-weight: 750;
   text-align: center;
-  padding-right: 105px;
+  padding-right: 6.2%;
 }
 .section-four .label-text {
   display: flex;
@@ -417,6 +417,7 @@ a {
   color: #383838;
   font-weight: 760;
   line-height: 0.9;
+  margin-right: 237px;
   position: relative;
 }
 
@@ -431,8 +432,12 @@ a {
   height: 30px;
 }
 .cell03 .content-wrapper {
-  padding: 71px 0 0 62px;
+  padding: 72px 0 0 0px;
   position: relative;
+  flex-direction: column;
+  display: flex;
+  justify-content: end;
+  align-items: end;
 }
 .cell03 .read-more a::after {
   content: "";
@@ -446,8 +451,8 @@ a {
   background-repeat: no-repeat;
 }
 .cell03 .read-more {
-  margin-top: 22px;
-  margin-left: 166px;
+  margin-top: 21px;
+  margin-right: 47.8%;
 }
 .cell03 .read-more a {
   position: relative;
@@ -459,14 +464,14 @@ a {
 }
 .cell03 p {
   margin-top: 21px;
-  width: 345px;
+  width: 36%;
   font-size: 1.5rem;
   line-height: 1.48;
   color: #383838;
-  margin-left: 167px;
   font-weight: 300;
   font-family: "Roboto", sans-serif;
   letter-spacing: 0.2px;
+  margin-right: 20%;
   word-spacing: 1px;
 }
 
@@ -738,8 +743,6 @@ a {
   z-index: -1;
   content: "";
   display: block;
-  /* width: 100%; */
-  /* height: 100%; */
   padding: 38px;
   top: -11px;
   left: -12px;
@@ -767,4 +770,108 @@ a {
 .fadeInDown {
   -webkit-animation-name: fadeInDown;
   animation-name: fadeInDown;
+}
+@media (max-width: 980px) {
+  .collection-wrapper {
+    grid-template-columns: 1fr;
+  }
+  .footer-container {
+    grid-template-columns: 1fr;
+  }
+  .footer-container .second-column ul {
+    justify-content: space-between;
+    flex-direction: column;
+  }
+  footer {
+    height: auto;
+    padding: 10px 20px;
+  }
+  .section-one,
+  .section-two,
+  .section-three {
+    background-size: 100%;
+    filter: brightness(100%) contrast(120%);
+    height: auto;
+  }
+  .divider::after {
+    height: 10px;
+  }
+  .section-one .hero-wrapper h3,
+  .section-one .hero-wrapper h1,
+  .section-one .hero-wrapper a {
+    color: #ffffff;
+  }
+
+  .section-four {
+    padding: 10px 0;
+  }
+  .cell06 p {
+    width: auto;
+  }
+  .page-navigator {
+    display: none;
+  }
+  .cell02 p {
+    text-align: center;
+    width: 100%;
+  }
+  .section-four .title h1 {
+    font-size: 4rem;
+  }
+  .section-two {
+    padding: 0;
+  }
+  .section-two .hero-wrapper .title {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-top: 0;
+  }
+  .section-two .hero-wrapper {
+    gap: 20px;
+    padding-block: 30px;
+    height: auto;
+  }
+  .section-two .hero-wrapper .description {
+    color: #fff;
+    padding: 0;
+    height: auto;
+    gap: 1px;
+    justify-content: center;
+  }
+  .arrow-down,
+  .section-two .hero-wrapper::after,
+  .section-three .hero-wrapper::after {
+    display: none;
+  }
+  .section-three {
+    padding-top: 69px;
+  }
+
+  .section-three .hero-wrapper .description {
+    color: #fff;
+    gap: 5px;
+  }
+  .section-three .hero-wrapper .decoration-text {
+    color: #fff;
+  }
+  .section-three .hero-wrapper .decoration-text::after {
+    background-color: #b8a47e;
+  }
+  .section-four .title {
+    display: flex;
+    margin: 0;
+    justify-content: center;
+    font-size: 3rem;
+    width: 100%;
+  }
+  .cell01 .heading-number {
+    display: flex;
+  }
+  .cell01 .heading-number::after {
+    display: none;
+  }
+  .collection-wrapper .image-container {
+    max-width: 50vh;
+  }
 }
