--- a/styles/footer.css
+++ b/styles/footer.css
@@ -62,6 +62,9 @@ footer {
   font-weight: 400;
   font-family: "Roboto";
 }
+.footer-container .address-container .address-1 {
+  font-weight: 700;
+}
 .footer-container .email-container {
   padding-left: 10px;
   padding-top: 13px;
