--- a/styles/header.css
+++ b/styles/header.css
@@ -105,14 +105,17 @@ header nav {
 /* Media query for small screens */
 @media (max-width: 980px) {
   header nav {
-    width: 60%;
-    height: 46px;
+    width: 100%;
+    height: 30px;
     position: fixed;
     z-index: 99;
-    justify-content: right;
-    align-items: center;
+    display: flex;
+    justify-content: end;
     margin-left: 0;
-    padding-left: 0;
+    padding-right: 30px;
+    padding-top: 30px;
+    height: 100px;
+    background-color: rgb(255, 255, 255, 0.1);
   }
   .navigation-menu {
     display: none;
@@ -122,12 +125,42 @@ header nav {
     display: block;
     cursor: pointer;
   }
+  .sticky-nav {
+    justify-content: end;
+  }
+  .sticky-nav .navigation-menu {
+    justify-content: end;
+    width: 50vw;
+  }
+  .navigation-menu {
+    top: 0;
+    right: 0;
+    position: fixed;
+    width: 50vw;
+    background-color: #fff;
+    height: 100vh;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    top: 100px;
+  }
+  .navigation-menu a {
+    color: #000000;
+  }
+  .menu-open {
+    background-color: #fff;
+  }
+  .menu-open .navigation-menu {
+    background-color: #fff;
+    display: block;
+  }
 
   /* Styling for the hamburger icon bars */
   .bar {
     width: 30px;
     height: 3px;
-    background-color: #333;
+    background-color: #000000;
     margin: 6px 0;
     transition: 0.4s;
   }
