fix(root): fix css responsive

--- a/styles/header.css
+++ b/styles/header.css
@@ -1,6 +1,6 @@
 header nav {
   width: 60%;
-  margin-left: 366px;
+  margin-left: 19.2%;
   height: 110px;
   padding-block: 59px;
   position: fixed;
