--- a/styles/footer.css
+++ b/styles/footer.css
@@ -56,7 +56,7 @@ footer {
   color: #383838;
   padding-top: 15px;
   line-height: 1.3;
-  padding-left: 67px;
+  padding-left: 14%;
   letter-spacing: -1px;
   font-weight: 400;
   font-family: "Roboto";
