--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,8 +64,8 @@ a {
   position: absolute;
   width: 17px;
   height: 17px;
-  top: 2px;
-  right: -31px;
+  top: 4px;
+  right: -34%;
   background-image: url("../utils/images/arrow_right.svg");
   background-size: 17px 17px;
   background-repeat: no-repeat;
@@ -113,7 +113,7 @@ a {
   letter-spacing: 0.1px;
   font-size: 1.45rem;
   line-height: 1.3;
-  overflow: hidden;
+  overflow-y: hidden;
 }
 .banner-section .description span {
   display: block;
@@ -132,7 +132,7 @@ a {
   height: 84px;
   bottom: 67px;
   padding-top: 6px;
-  padding-inline: 89px 89px;
+  padding-inline: 5%;
 }
 
 .banner-section .arrow-down img {
@@ -143,14 +143,14 @@ a {
   height: 572.5px;
   background-image: url("../utils/images/hero_image2.svg");
   background-size: 67.2% auto;
-  padding-right: 158px;
+  padding-right: 8.4%;
   padding-top: 100px;
   background-position: top left;
 }
 
 .section-two .hero-wrapper {
   justify-content: flex-end;
-  gap: 28px;
+  gap: 4%;
   height: 472px;
 }
 
@@ -159,15 +159,18 @@ a {
   padding-top: 100px;
 }
 .section-two .hero-wrapper h3 {
-  margin-right: 25px;
+  margin-right: -3%;
 }
 .section-two .hero-wrapper h1 {
-  padding-right: 44px;
+  padding-right: 31%;
+  text-wrap: nowrap;
 }
 .section-two .description {
-  padding-right: 109px;
+  padding-right: 6%;
+  width: 24.2%;
   padding-top: 75px;
-  height: 300px;
+  height: 62%;
+  overflow-y: hidden;
 }
 
 .section-two .hero-wrapper::after {
@@ -177,7 +180,7 @@ a {
 }
 
 .section-two .arrow-down {
-  right: 155px;
+  right: 9%;
   bottom: 67px;
   background: #ffffff;
 }
@@ -194,21 +197,23 @@ a {
 .section-three .hero-wrapper {
   display: flex;
   position: relative;
-  gap: 5.8%;
+  gap: 4.8%;
   padding-left: 9%;
   height: 347px;
 }
 .section-three .description {
-  padding-left: 65px;
-  padding-top: 42px;
+  padding-left: 4%;
+  padding-top: 44px;
+  height: 80%;
   font-weight: 550;
+  width: 29%;
   letter-spacing: -0.0025px;
 }
 .section-three .hero-wrapper h1 {
   letter-spacing: 11.8px;
 }
 .section-three .hero-wrapper h3 {
-  padding-left: 117px;
+  padding-left: 17%;
 }
 .section-three .hero-wrapper .title {
   padding-top: 81px;
@@ -222,7 +227,7 @@ a {
 }
 
 .section-three .arrow-down {
-  left: 313px;
+  left: 18%;
   bottom: -51px;
   background-color: #ededed;
 }
@@ -232,7 +237,7 @@ a {
   font-weight: 700;
   letter-spacing: 10.3px;
   font-size: 4.1rem;
-  left: 184px;
+  left: 10.5%;
   top: -31px;
   z-index: 1;
 }
@@ -285,11 +290,11 @@ a {
   content: "";
   display: inline-block;
   position: absolute;
-  left: -150px;
+  left: -28%;
   top: 50%;
   height: 2px;
   background-color: #000000;
-  width: 139px;
+  width: 25.6%;
 }
 
 .collection-wrapper {
@@ -308,20 +313,21 @@ a {
   font-weight: 700;
   position: relative;
   padding-left: 8.7%;
+  z-index: 2;
 }
 .cell01 .heading-number::after {
   content: "";
   display: inline-block;
   height: 2px;
   background-color: #000000;
-  width: 139px;
+  width: 15%;
   margin-bottom: 22px;
 }
 
 .cell01 .image-container {
   margin-top: -44px;
   width: 96%;
-  margin-left: 84px;
+  margin-left: 8.6%;
 }
 
 .cell02 {
@@ -329,10 +335,10 @@ a {
   flex-direction: column;
   justify-content: center;
   position: relative;
-  padding-left: 43px;
+  padding-left: 6%;
 }
 .cell02 .content-wrapper {
-  padding-left: 49px;
+  padding-left: 8%;
   height: 217px;
 }
 .cell02 h1 {
@@ -383,7 +389,7 @@ a {
   width: 27%;
   height: 153px;
   bottom: 100px;
-  left: 119px;
+  left: 17%;
   background-image: url(../utils/images/tanner_logo2.svg);
   background-size: 153px;
   background-repeat: no-repeat;
@@ -393,7 +399,7 @@ a {
   content: "";
   height: 69px;
   top: 148px;
-  left: 94px;
+  left: 13.3%;
   width: 2px;
   background-color: black;
 }
@@ -402,7 +408,7 @@ a {
   content: "";
   height: 138px;
   bottom: 114px;
-  left: 106px;
+  left: 15%;
   width: 2px;
   background-color: black;
   z-index: 2;
@@ -427,7 +433,7 @@ a {
   content: "";
   position: absolute;
   background-color: #e1daca;
-  left: -26px;
+  left: -5%;
   width: 110%;
   top: 7px;
   z-index: -1;
@@ -483,7 +489,7 @@ a {
 .cell04 .image-container {
   position: absolute;
   top: -152px;
-  left: -100px;
+  left: -14%;
   width: 82.9%;
 }
 
@@ -674,9 +680,9 @@ a {
 
 .page-navigator {
   position: fixed;
-  width: 91px;
+  width: 4.5%;
   padding: 0px;
-  left: 73px;
+  left: 4%;
   top: 29.1%;
   display: flex;
   flex-direction: column;
